fixed gap in branding

--- a/src/styles/components/_brandguide.scss
+++ b/src/styles/components/_brandguide.scss
@@ -96,6 +96,7 @@
 		}
 
 		&_items {
+			gap: 1vw;
 			padding-top: 2vh;
 			justify-content: space-between;
 
